fix nav alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,6 +270,9 @@
   .max-w-7xl {
     max-width: var(--container-7xl);
   }
+  .max-w-full {
+    max-width: 100%;
+  }
   .flex-1 {
     flex: 1;
   }
